# ascend

./: .gitattributes  .gitignore  .npmrc  AGENTS.md  AUTHORS.md  JUNIOR_WORKFLOW.md  PROJECT-CHARTER.md  README.md  SECURITY.md  electron-builder.config.cjs  eslint.config.mjs  forge.config.cjs  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.mts
docs/: ARCHITECTURE.md  DATA-MODEL.md  FOUNDATION-APPROVAL.md  INTEGRATIONS-SPEC.md  OPEN-DECISIONS.md  REFERENCE-SOURCES.md  RESEARCH-SYNTHESIS.md  SPEC.md  STACK-VERSION-PROPOSAL.md  THREAT-MODEL.md  WINDOWS-INSTALLER-CLEANUP-PROPOSAL.md  WINDOWS-INSTALLER-FALLBACK-PROPOSAL.md
docs/decisions/: ADR-0001-individual-first-organization-ready.md  ADR-0002-v1-personal-work-integrations.md  ADR-0003-mcp-first-provider-integration-gateway.md
docs/reviews/: FOUNDATION-REVIEW-2026-07-18.md  INSTALLER-SPIKE.md  NSIS-INSTALLER-PROOF.md  TASK-3-REVIEW-2026-07-18.md
scripts/: bootstrap-node.ps1  build-engine.ps1  build-installer.ps1  build-shell.ps1  check-python.ps1  check.ps1  electron-fuse-policy.cjs  installer-policy.cjs  installer-policy.test.cjs  package-filter.cjs  package-filter.test.cjs  package-manifest.cjs  package-manifest.test.cjs  test-installer.ps1
shell/: preload.ts
shell/main/: application-resource.test.mts  application-resource.ts  main.ts  window-options.test.mts  window-options.ts
shell/renderer/: index.html  styles.css
src/ascend_engine/: __init__.py  __main__.py
tasks/: integrations-plan.md  plan.md  todo.md
tests/: test_cli.py  test_scaffold.py
