[project]
name = "ascend-engine"
version = "0.0.0"
description = "Local Python engine for Ascend"
readme = "README.md"
requires-python = "==3.13.14"
dependencies = []

[build-system]
requires = ["uv_build==0.11.29"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy==2.3.0",
    "pyinstaller==6.21.0",
    "pytest==9.1.1",
    "ruff==0.15.22",
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "-ra"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
warn_unreachable = true
